# fallow

./: .gitattributes  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  ROADMAP.md  SECURITY.md  action.yml  package-lock.json  package.json  rule-pack-schema.json  schema.json
.claude/agents/: ci-formats-reviewer.md  json-output-reviewer.md  vscode-reviewer.md
.claude/hooks/: pre-bash-guard.py
.claude/rules/: cli-crate.md  core-crate.md  detection.md  extract-crate.md  lsp-server.md  mcp-server.md  plugins.md  release-workflow.md  vscode-extension.md
.github/scripts/: check-telemetry-fail-rate.mjs  update-dockerfile-pins.mjs  update-dockerfile-pins.test.mjs  verify-pack-contents.test.mjs
.github/workflows/: bench.yml  (+8 more)
action/: README.md
benchmarks/: bench-ci.sh  compare-audit-runtime.sh
ci/: gitlab-ci.yml
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: component_config.rs  component_engine.rs  component_graph.rs  component_output.rs  programmatic_commands.rs  programmatic_stable.rs  representative_sources.rs
docs/: analyzer-authoring.md  architecture-invariants.md  backwards-compatibility.md  benchmarking.md  environment-variables.md  fallow-core-migration.md  output-schema.json  security-agent-verification.md  telemetry.md
scripts/: agent-files.sha256  check-benchmark-harness.py  generate-agent-docs.mjs  generate-agent-docs.test.mjs  generate-all.mjs  repository-policy.test.mjs  scaffold-analyzer-plan.mjs  scan-hidden-unicode.py  test-scan-hidden-unicode.sh  workflow-policy.test.mjs
(+944 files in other folders)
